bynkc/tests/fixtures/negative/210_by_underscore_binder/src/demo.bynk
context demo

service api from http {
  on GET("/ping") () -> Effect[HttpResult[String]] by _: Visitor {
    Ok("pong")
  }
}
